src/components/Skills/Skills.css
.button,
.button:hover,
.button:active,
.button:visited,
.button:focus {
    text-decoration: none !important;
}



/* .centeredSkills {

    text-align: center !important;
    align-content: center !important;
} */

a,
a:hover,
a:active,
a:visited,
a:focus {
    text-decoration: none !important;
}

h2 {

    color: white;

}

.skillsIcon {

    color: white;
}

.skillsIcon:hover {

    color: rgb(189, 0, 0);
    transition: all 0.25s !important;
}

.skillsTransform:hover
.skillsTransform:focus
.skillsTransform:active {

    transform: translateY(-4x);
}

/* .skillsContainerWidth {

    max-width: 750px !important; 
    justify-content: center!important;
} */


.skillsBox {

    min-height: auto !important;
    padding-top: 5px;
    padding-bottom: 5px;
    background: black;
    font:white;
    
} 


.nineSixtyWidth {

    max-width: 960px !important;
    margin-bottom: 10px !important;
    
}

.paddingAdjust {

    padding-bottom: 80px !important;
    

}

.paddingAdjustArrow {

    padding-top: 50px !important;

}

.centerSkillsArrow {text-align: center !important;
    align-content: center !important
    }

    .vertical-center {
        
        vertical-align: middle !important;
       
        align-items: center !important;
      }   



 /* skills section height adjustments that sync */
 /* with built in bootstrap responsive breakpoints */


/* @media (min-width: 384px) { 
    .heightQuery {
        height: 495px !important
        }

 }
 
@media (min-width: 512px) { 
    .heightQuery {
        height: 396px !important
        }

 }

 @media (min-width: 480px) { 
    .heightQuery {
        height: 396px !important
        }

 }

 @media (min-width: 961px) { 

    .heightQuery {
        height: 250px !important
        }
}

/* // Large devices (desktops, 992px and up) */
/* @media (min-width: 992px) { 

    .heightQuery {
        height: 250px !important
        }
} */

/* // Extra large devices (large desktops, 1200px and up) */
/* @media (min-width: 1200px) { 
    
    .heightQuery {
    height: 250px !important
    }
 }

 @media (max-width: 671px) { 
    
    .heightQuery {
    height: 250px !important
    }
 } */ 


 /* tool-tip  */

 .tooltip-inner {
    /* background-color: rgb(189, 0, 0) !important;
    color: white !important; */

    color: rgb(189, 0, 0) !important;
    font-weight: bold !important;

    }

    /* .tooltip.bs-tooltip-top .arrow:before {
        border-top-color: rgb(189, 0, 0) !important;
       padding-bottom: 10px!important; 
    } */

